[package]
name = "mpcontroller"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
dotenvy = "0.15.7"
env_logger = "0.11.6"
log = { version = "0.4.22", features = ["serde", "std", "kv_unstable"] }
mpris = "2.0.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_derive = "1.0.217"
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
